--- a/page26.html
+++ b/page26.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-7e" data-rv-view="491">
+  <section id="menu-7e" data-rv-view="498">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="495" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="502" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7h" data-rv-view="498" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7h" data-rv-view="505" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-7i" data-rv-view="500" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-7i" data-rv-view="507" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -99,7 +99,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7j" data-rv-view="502" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7j" data-rv-view="509" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -109,7 +109,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7k" data-rv-view="504" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7k" data-rv-view="511" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7l" data-rv-view="506" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7l" data-rv-view="513" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -130,7 +130,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7f" data-rv-view="493" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7f" data-rv-view="500" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
