--- a/page51.html
+++ b/page51.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-gp" data-rv-view="1209">
+  <section id="menu-gp" data-rv-view="1216">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1213" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1220" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -91,7 +91,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1216" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1223" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -101,7 +101,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1211" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1218" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
