--- a/page68.html
+++ b/page68.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-lx" data-rv-view="1805">
+  <section id="menu-lx" data-rv-view="1812">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-lz" data-rv-view="1809" style="background-image: url(assets/images/mbr-1-1920x1357.jpg);">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-lz" data-rv-view="1816" style="background-image: url(assets/images/mbr-1-1920x1357.jpg);">
 
     
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-m0" data-rv-view="1812" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-m0" data-rv-view="1819" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -102,7 +102,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ly" data-rv-view="1807" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ly" data-rv-view="1814" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
