--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-d" data-rv-view="193">
+  <section id="menu-d" data-rv-view="20">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="197" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="24" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -98,7 +98,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="200" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="27" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class=" container article-slider">
         <div class=" row">
             <div class=" col-xs-12">
@@ -110,13 +110,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/mbr-18-1620x1080.jpg">
+                                <img src="assets/images/mbr-4-1920x1280.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
-                                        <h2 class="mbr-section-title display-2">And What About the Future?</h2>
-                                        <p class="mbr-section-lead lead">An article on finding your way</p>
+                                        <h2 class="mbr-section-title display-2">Valentine's Day Love Stories</h2>
+                                        <p class="mbr-section-lead lead">Tales of how teachers met their spouses</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page52.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page75.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="195" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="22" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
