--- a/page19.html
+++ b/page19.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-4o" data-rv-view="485">
+  <section id="menu-4o" data-rv-view="358">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="489" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="362" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="492" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="365" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -83,7 +83,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="487" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="360" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
