--- a/page35.html
+++ b/page35.html
@@ -25,9 +25,9 @@
   
 </head>
 <body>
-  <div id="menu-bq" custom-code="true" data-rv-view="826"></div>
+  <div id="menu-bq" custom-code="true" data-rv-view="699"></div>
 
-<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="829" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="702" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -52,7 +52,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="DVeEqo4PAmC7MN8Wx2+UPPFFHpFw8lQdxqIfpMFY/CgtRa1F7d8jKgWJ2C7wY9Nsjr7zNnY84HpEp0VKgECE4nWgcrtYOkC0/JeprdWj2az4URACadQ5jZ/kFS9wa8Ym" data-form-email="true">
+                        <input type="hidden" value="6hlKu/pO67D1bBbitdcoFl8rnkq5Nu4sUIrtHlgXiIgoAf0izWlOySMK+fY/n05aiF5OrEPbRHdt+YqoaQk2XeAUqkTbAhJg/93jTyX0vdkWwDMHga8Ryv/0A1k6rsKX" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -93,7 +93,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="827" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="700" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
