--- a/page58.html
+++ b/page58.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-j0" data-rv-view="1572">
+  <section id="menu-j0" data-rv-view="1445">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1576" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1449" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -88,7 +88,7 @@
 
 </section>
 
-<div id="custom-html-j3" custom-code="true" data-rv-view="1579"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-j3" custom-code="true" data-rv-view="1452"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -393,7 +393,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1574" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1447" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
