--- a/page61.html
+++ b/page61.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-jn" data-rv-view="1652">
+  <section id="menu-jn" data-rv-view="1525">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-js" data-rv-view="1654" style="background-image: url(assets/images/mbr-1920x1310.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-js" data-rv-view="1527" style="background-image: url(assets/images/mbr-1920x1310.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-jp" data-rv-view="1661" style="background-image: url(assets/images/mbr-1920x954.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-jp" data-rv-view="1534" style="background-image: url(assets/images/mbr-1920x954.jpg);">
 
     
 
@@ -122,7 +122,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="testimonials4-jq" data-rv-view="1664" style="background-image: url(assets/images/mbr-1920x1404.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="testimonials4-jq" data-rv-view="1537" style="background-image: url(assets/images/mbr-1920x1404.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -162,7 +162,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-jr" data-rv-view="1669" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-jr" data-rv-view="1542" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -180,7 +180,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-jo" data-rv-view="1659" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-jo" data-rv-view="1532" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
