--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-d" data-rv-view="20">
+  <section id="menu-d" data-rv-view="143">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="24" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="147" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -98,12 +98,12 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="27" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="150" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class=" container article-slider">
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-16" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="3"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" class="" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -155,13 +155,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/mbr-17-1620x1080.jpg">
+                                <img src="assets/images/mbr-1920x1440.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-1">
-                                        <h2 class="mbr-section-title display-2">An Interview With the <br>New Head of School</h2>
-                                        <p class="mbr-section-lead lead">Everything you'd like to know about our new head of school.</p>
+                                        <h2 class="mbr-section-title display-2">The Nature and History of Central Banking</h2>
+                                        <p class="mbr-section-lead lead">A (not so) brief history of central banking by Isaiah Lowney.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page51.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page80.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="22" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="145" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
