--- a/page21.html
+++ b/page21.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-57" data-rv-view="386">
+  <section id="menu-57" data-rv-view="488">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="390" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="492" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="393" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="495" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="395" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="497" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -100,7 +100,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="397" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="499" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -110,7 +110,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="388" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="490" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
