--- a/page51.html
+++ b/page51.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-gp" data-rv-view="1183">
+  <section id="menu-gp" data-rv-view="1285">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1187" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1289" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -92,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1190" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -102,7 +102,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1185" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1287" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
