--- a/page52.html
+++ b/page52.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="menu-gv" data-rv-view="1195">
+  <section id="menu-gv" data-rv-view="1297">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1192" style="padding-top: 100px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1294" style="padding-top: 100px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -103,7 +103,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1197" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1299" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -113,7 +113,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1199" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1301" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -123,7 +123,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1201" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1303" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +133,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1203" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1305" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -143,7 +143,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1205" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1307" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
