--- a/page53.html
+++ b/page53.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-h3" data-rv-view="1207">
+  <section id="menu-h3" data-rv-view="1309">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features1-h6" data-rv-view="1211" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features1-h6" data-rv-view="1313" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-h4" data-rv-view="1209" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-h4" data-rv-view="1311" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
