--- a/page70.html
+++ b/page70.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-mp" data-rv-view="1921">
+  <section id="menu-mp" data-rv-view="2023">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="1916" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="2018" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
 
     
 
@@ -80,7 +80,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-o1" data-rv-view="1919" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-o1" data-rv-view="2021" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article">
             <div>
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="1925" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="2027" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article">
             <div>
@@ -104,7 +104,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="1923" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="2025" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
