--- a/page50.html
+++ b/page50.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-gk" data-rv-view="1277">
+  <section id="menu-gk" data-rv-view="1189">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1281" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1193" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -88,7 +88,7 @@
 
 </section>
 
-<div id="custom-html-gn" custom-code="true" data-rv-view="1284"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-gn" custom-code="true" data-rv-view="1196"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -393,7 +393,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1279" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1191" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
