--- a/Article Page.html
+++ b/Article Page.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-1o" data-rv-view="298">
+  <section id="menu-1o" data-rv-view="210">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="302" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="214" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="305" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="217" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="307" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="219" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -100,7 +100,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="309" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="221" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -110,7 +110,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="311" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="223" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -121,7 +121,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="313" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="225" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -131,7 +131,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="300" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="212" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
