--- a/page22.html
+++ b/page22.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-5h" data-rv-view="501">
+  <section id="menu-5h" data-rv-view="413">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="505" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="417" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="508" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="420" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="510" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="422" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -100,7 +100,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="512" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="424" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -110,7 +110,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="514" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="426" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="516" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="428" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -137,7 +137,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="518" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="430" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -154,7 +154,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="520" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="432" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -164,7 +164,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="522" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="434" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -181,7 +181,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="524" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="436" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -191,7 +191,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="503" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="415" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
