--- a/page57.html
+++ b/page57.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="menu-i1" data-rv-view="1444">
+  <section id="menu-i1" data-rv-view="1356">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1448" style="background-image: url(assets/images/mbr-840x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1360" style="background-image: url(assets/images/mbr-840x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -85,7 +85,7 @@
                      
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1455" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1367" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -99,7 +99,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1446" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1358" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
