--- a/page66.html
+++ b/page66.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-lg" data-rv-view="1850">
+  <section id="menu-lg" data-rv-view="1762">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-li" data-rv-view="1845" style="background-image: url(assets/images/mbr-1920x1279.jpg);">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-li" data-rv-view="1757" style="background-image: url(assets/images/mbr-1920x1279.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -99,7 +99,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-lj" data-rv-view="1848" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-lj" data-rv-view="1760" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -109,7 +109,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lk" data-rv-view="1852" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lk" data-rv-view="1764" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -119,7 +119,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-ll" data-rv-view="1854" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-ll" data-rv-view="1766" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -129,7 +129,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lm" data-rv-view="1856" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lm" data-rv-view="1768" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -139,7 +139,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-ln" data-rv-view="1858" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-ln" data-rv-view="1770" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -149,7 +149,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lo" data-rv-view="1860" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lo" data-rv-view="1772" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -159,7 +159,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-lp" data-rv-view="1862" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-lp" data-rv-view="1774" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -169,7 +169,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-lr" data-rv-view="1864" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content6-lr" data-rv-view="1776" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -180,7 +180,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-lh" data-rv-view="1866" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-lh" data-rv-view="1778" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
