--- a/page80.html
+++ b/page80.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-q2" data-rv-view="2472">
+  <section id="menu-q2" data-rv-view="2384">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-q6" data-rv-view="2476" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-q6" data-rv-view="2388" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -68,7 +68,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-q8" data-rv-view="2478" style="background-image: url(assets/images/mbr-1-1920x1440.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-q8" data-rv-view="2390" style="background-image: url(assets/images/mbr-1-1920x1440.jpg);">
 
     
 
@@ -90,7 +90,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-q5" data-rv-view="2481" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-q5" data-rv-view="2393" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -153,7 +153,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q3" data-rv-view="2474" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q3" data-rv-view="2386" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
