--- a/page84.html
+++ b/page84.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-r6" data-rv-view="2547">
+  <section id="menu-r6" data-rv-view="2498">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-r8" data-rv-view="2551" style="background-image: url(assets/images/green-book-2018-still-1296x864.jpg);">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-r8" data-rv-view="2502" style="background-image: url(assets/images/green-book-2018-still-1296x864.jpg);">
 
     
 
@@ -80,7 +80,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-r9" data-rv-view="2554" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-r9" data-rv-view="2505" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-r7" data-rv-view="2549" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-r7" data-rv-view="2500" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
