--- a/page35.html
+++ b/page35.html
@@ -52,7 +52,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="BRnGzZ8ozCWkn8pBi10pzL4W4d3J1bXwSmPzXL/ML+kqeQ2lene72gND0ix5QtMxIC4NdI5+jPB9WPNAHRw93es567swKlUvEhXSPja3+SMk4x9XiPs67ORRndjZU27n" data-form-email="true">
+                        <input type="hidden" value="00laRrikk1dHStdu8FoXmr+PiAVAXv8kGKMGw8q05kiG0s47Gb+lvKNHWt5YXl9EY8hGWxvMdbMFJMHkcOHAPXr+9ICsD6JK2l8W8GJWBu1Pm8AoemeWJMuD7DAWGxFW" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -93,7 +93,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="714" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="714" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
