--- a/page26.html
+++ b/page26.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="483" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="483" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
